--- a/public/index.html
+++ b/public/index.html
@@ -4,34 +4,86 @@
   <meta charset="UTF-8">
   <title>Api Todos Dark</title>
   <style>
-    body {
+body {
       background-color: #222;
       color: #fff;
       font-family: 'Arial', sans-serif;
       text-align: center;
-      padding: 40px;
+      padding: 20px;
     }
 
     h1 {
-      font-size: 36px;
-      margin-bottom: 20px;
+      font-size: 28px;
+      margin-bottom: 10px;
+      word-wrap: break-word;
     }
 
     p {
-      font-size: 18px;
+      font-size: 16px;
+      margin-bottom: 10px;
+      word-wrap: break-word;
     }
+
     a {
       color: #ff6b6b;
-      font-size: 26px;
+      font-size: 20px;
       text-decoration: none;
+      margin-bottom: 20px;
+      display: block;
+      word-wrap: break-word;
     }
 
     a:hover {
       color: #ff3d3d;
     }
-    li{
-        list-style-type:lower-roman;
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
+
+    li {
+      font-size: 18px;
+      text-align: left;
+      margin-bottom: 10px;
+      width: 100%;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    /* Responsive Styles */
+    /* Responsive Styles */
+@media (max-width: 600px) {
+  body {
+    padding: 10px;
+  }
+
+  h1 {
+    font-size: 28px;
+    margin-bottom: 12px;
+  }
+
+  p {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+
+  a {
+    font-size: 24px;
+    margin-bottom: 24px;
+  }
+
+  li {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+}
+
   </style>
 </head>
 <body>
