--- a/public/index.html
+++ b/public/index.html
@@ -4,95 +4,120 @@
   <meta charset="UTF-8">
   <title>Api Todos Dark</title>
   <style>
-body {
+    body {
       background-color: #222;
       color: #fff;
       font-family: 'Arial', sans-serif;
-      text-align: center;
       padding: 20px;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
 
     h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-      word-wrap: break-word;
+      font-size: 3rem;
+      margin-bottom: 1rem;
     }
 
     p {
-      font-size: 16px;
-      margin-bottom: 10px;
-      word-wrap: break-word;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
     }
 
     a {
       color: #ff6b6b;
-      font-size: 20px;
+      font-size: 2.5rem;
       text-decoration: none;
-      margin-bottom: 20px;
-      display: block;
-      word-wrap: break-word;
+      margin-bottom: 2rem;
+      display: inline-block;
+      padding: 10px 20px;
+      border: 2px solid #ff6b6b;
+      border-radius: 5px;
+      transition: all 0.3s ease;
     }
 
     a:hover {
-      color: #ff3d3d;
+      background-color: #ff6b6b;
+      color: #222;
     }
 
-    ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
+    .container {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
-    li {
-      font-size: 18px;
+    #displayTodo {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+    }
+
+    #displayList {
+      padding: 0;
+      margin: 0;
+      list-style-type: none;
       text-align: left;
-      margin-bottom: 10px;
-      width: 100%;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
+    }
+
+    #displayList li {
+      font-size: 1.8rem;
+      margin-bottom: 1.2rem;
+    }
+
+    #fetch {
+      font-size: 2rem;
+      padding: 10px 20px;
+      border: 2px solid #ff6b6b;
+      border-radius: 5px;
+      background-color: #ff6b6b;
+      color: #222;
+      cursor: pointer;
     }
 
     /* Responsive Styles */
-    /* Responsive Styles */
-@media (max-width: 600px) {
-  body {
-    padding: 10px;
-  }
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
 
-  h1 {
-    font-size: 28px;
-    margin-bottom: 12px;
-  }
+      p {
+        font-size: 1.2rem;
+      }
 
-  p {
-    font-size: 20px;
-    margin-bottom: 12px;
-  }
+      a {
+        font-size: 1.8rem;
+      }
 
-  a {
-    font-size: 24px;
-    margin-bottom: 24px;
-  }
+      #displayTodo {
+        font-size: 1.8rem;
+      }
 
-  li {
-    font-size: 20px;
-    margin-bottom: 12px;
-  }
-}
+      #displayList li {
+        font-size: 1.6rem;
+      }
 
+      #fetch {
+        font-size: 1.8rem;
+      }
+    }
   </style>
+  
+  
 </head>
 <body>
-  <h1>Api Anasayfa</h1>
-  <p>Todo => /todos </p>
-  <a href="/todos">Verileri Gör:</a>
-  <button id="fetch">
-    Verileri çek:
-  </button>
+    <div class="mastercontainer">
+        <h1>Api Anasayfa</h1>
+        <p>Todo => /todos </p>
+        <a href="/todos">Verileri Gör:</a>
+        <button id="fetch">
+            Verileri çek:
+          </button>
+    </div>
+
+
 
   <div class="container">
     <p id="displayTodo">
