--- a/public/index.html
+++ b/public/index.html
@@ -3,107 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Api Todos Dark</title>
-  <style>
-    body {
-      background-color: #222;
-      color: #fff;
-      font-family: 'Arial', sans-serif;
-      padding: 20px;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    p {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-    }
-
-    a {
-      color: #ff6b6b;
-      font-size: 2.5rem;
-      text-decoration: none;
-      margin-bottom: 2rem;
-      display: inline-block;
-      padding: 10px 20px;
-      border: 2px solid #ff6b6b;
-      border-radius: 5px;
-      transition: all 0.3s ease;
-    }
-
-    a:hover {
-      background-color: #ff6b6b;
-      color: #222;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    #displayTodo {
-      font-size: 2rem;
-      margin-bottom: 2rem;
-    }
-
-    #displayList {
-      padding: 0;
-      margin: 0;
-      list-style-type: none;
-      text-align: left;
-    }
-
-    #displayList li {
-      font-size: 1.8rem;
-      margin-bottom: 1.2rem;
-    }
-
-    #fetch {
-      font-size: 2rem;
-      padding: 10px 20px;
-      border: 2px solid #ff6b6b;
-      border-radius: 5px;
-      background-color: #ff6b6b;
-      color: #222;
-      cursor: pointer;
-    }
-
-    /* Responsive Styles */
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      p {
-        font-size: 1.2rem;
-      }
-
-      a {
-        font-size: 1.8rem;
-      }
-
-      #displayTodo {
-        font-size: 1.8rem;
-      }
-
-      #displayList li {
-        font-size: 1.6rem;
-      }
-
-      #fetch {
-        font-size: 1.8rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
   
   
 </head>
@@ -112,7 +12,8 @@
         <h1>Api Anasayfa</h1>
         <p>Todo => /todos </p>
         <a href="/todos">Verileri Gör:</a>
-        <button id="fetch">
+        <a href="/postTodo">Todo ekle:</a>
+          <button id="fetch">
             Verileri çek:
           </button>
     </div>
@@ -159,6 +60,7 @@
         fetchButton.style.display="none";
         fetchButton.remove();
     });
+    fetchButton.click();
   </script>
 </body>
 </html>
